<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CriarEstudante">

    <EditText
        android:id="@+id/txtIdEstudante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtIdEstudante"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtNomeEstudante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtNomeEstudante"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtPassowordEstudante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtPasswordEstudante"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtCursoEstudante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtCursoEstudante"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAdicionarEstudante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdicionarEstudante" />

</LinearLayout>